Finsihing form grouping for all tabs and controls, Modifying HTML forms using Reactive forms instead of Template Driven Forms

--- a/real_estate_client/src/app/property/property-add/add-property/add-property.component.html
+++ b/real_estate_client/src/app/property/property-add/add-property/add-property.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="row">
     <div class="col-8 m-auto p-0 shadow-lg bg-white">
         <div class="card-header">
@@ -15,147 +16,164 @@
 
             <p-tabpanels>
                 <div class="card-body">
-                <form (ngSubmit)='Save()' #Form="ngForm">
-                    <p-tabpanel [value]="0" ngModelGroup="BasicInfo" #BasicInfo="ngModelGroup">
-                        <div class="form-group">
-                            <p-radiobutton value="1" ngModel name="RealEstateType" [(ngModel)]="propertyView.RealEstateType" required/>
+                <form (ngSubmit)='Save()' [formGroup]="addPropertyForm">
+                    <p-tabpanel [value]="0" formGroupName="BasicInfo">
+                        <div class="form-group">                      
+                            <p-radiobutton value="1" formControlName="RealEstateType"/>
                             <label for="sell" class="me-2 ">Sell</label>
 
-                            <p-radiobutton value="2" ngModel name="RealEstateType" [(ngModel)]="propertyView.RealEstateType" required/>
+                            <p-radiobutton value="2" formControlName="RealEstateType"/>
                             <label  for="rent">Rent</label>
+
+                            <h5 class="error-block ms-1 d-inline" *ngIf="RealEstateType.hasError('required')">*</h5>
                         </div>                
 
                         <div class="form-group mt-3">
                             <div>
                                 <label>In Building/Society/Project</label>
-                            </div>                     
-                            <input type="text" class="form-control" #prop_name="ngModel" ngModel name="prop_name" [(ngModel)]="propertyView.Name" required minlength="5">
-                            <span *ngIf="!prop_name.valid && prop_name.touched" class="error-block">
-                                <span *ngIf="prop_name.errors['required']">Name is mandatory field</span>
-                                <span *ngIf="prop_name.errors['minlength']">Name must be at least 5 characters long</span>
-                            </span>
+                            </div>   
+                            <input type="text" class="form-control" formControlName="Name" [(ngModel)]="propertyView.Name">
+
+                            <div class="error-block" *ngIf="Name.hasError('required') && Name.touched">
+                                <span class="fw-bold">Property Name is required</span>
+                            </div>
                         </div>
 
                         <div class="form-group mt-3">
                             <div>
                                 <label>City</label>
                             </div>                     
-                            <input type="text" class="form-control" ngModel name="city" [(ngModel)]="propertyView.City" required>
+                            <input type="text" class="form-control" formControlName="City" [(ngModel)]="propertyView.City">
                         </div>
         
                         <div class="form-group mt-3">
                             <div>
                                 <label>Property Type</label>
                             </div>
-                            <div *ngFor="let property of propertyTypes" class="d-inline me-2">                      
-                                <p-radiobutton name="PropertyType" [value]="property" [(ngModel)]="propertyView.PropertyType" required></p-radiobutton>
+                            <div *ngFor="let property of propertyTypes" class="d-inline me-1">                      
+                                <p-radiobutton formControlName="PropertyType" [value]="property" [(ngModel)]="propertyView.PropertyType"></p-radiobutton>
                                 <label> {{ property }}</label>
                             </div>
+
+                            <h5 class="error-block d-inline" *ngIf="PropertyType.hasError('required')">*</h5>
                         </div>
 
                         <div class="form-group mt-3">
                             <div>
                                 <label for="type">Furnishing Type</label>
                             </div>                  
-                            <div *ngFor="let furnishType of furnishTypes" class="d-inline me-2">
-                                <p-radiobutton name="FurnishingType" [value]="furnishType" [(ngModel)]="propertyView.FurnishingType" required></p-radiobutton>
-                                <label> {{ furnishType }}</label>
+                            <div *ngFor="let furnishingType of furnishingTypes" class="d-inline me-2">
+                                <p-radiobutton formControlName="furnishingType" [value]="furnishingType" [(ngModel)]="propertyView.FurnishingType"></p-radiobutton>
+                                <label> {{ furnishingType }}</label>
                             </div>
                         </div>
 
-                        <!--
-                        <div class="form-group mt-3">
-                            <label>Price</label>
-                            <input type="number" class="form-control" #prop_price="ngModel" ngModel name="prop_price" required>
-                            <span *ngIf="!prop_price.valid && prop_price.touched" class="error-block">
-                                <span *ngIf="prop_price.errors['required']">Price is mandatory field</span>
-                            </span>
-                        </div>
-                        -->
-
                         <div class="form-group mt-3">                                                     
-                            <button [disabled]="!BasicInfo.valid" type="button" class="btn btn-outline-success me-2 btn-sm" (click)="currentTab = 1">Next</button>                    
+                            <button type="button" class="btn btn-outline-success me-2 btn-sm" (click)="currentTab = 1">Next</button>                    
                         </div>
                     </p-tabpanel>
-                    <p-tabpanel [value]="1">
+                    <p-tabpanel [value]="1" formGroupName="PricingInfo">
                         <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" class="form-control" name="Price" [(ngModel)]="propertyView.Price">
+                            <label *ngIf="RealEstateType.value == 1">Price (IN USD)</label>
+                            <label *ngIf="RealEstateType.value == 2">Rent (IN USD)</label>
+
+                            <input type="number" class="form-control" formControlName="Price" [(ngModel)]="propertyView.Price">
+
+                            <div class="error-block" *ngIf="Price.hasError('required') && Price.touched">
+                                <span class="fw-bold">{{RealEstateType.value == 1 ? ' Price' : 'Rent'}} amount is required</span>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label>Security</label>
-                            <input type="text" class="form-control">
+                            <label>Security (In USD)</label>
+                            <input type="number" class="form-control" formControlName="Security">
                         </div>
                         <div class="form-group">
-                            <label>Maintenance</label>
-                            <input type="text" class="form-control">
+                            <label>Maintenance (In USD)</label>
+                            <input type="number" class="form-control" formControlName="Maintenance">
                         </div>
                         <div class="form-group">
-                            <label>Built Area</label>
-                            <input type="text" ngModel name="TotalArea" [(ngModel)]="propertyView.TotalArea" class="form-control">
+                            <label>Total Area</label>
+                            <input type="text" formControlName="TotalArea" [(ngModel)]="propertyView.TotalArea" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label>Carpet Area</label>
-                            <input type="text" class="form-control">
+                            <label>Carpet Area (In m<sup>2</sup>)</label>
+                            <input type="text" class="form-control" formControlName="CarpetArea">
                         </div>
 
                         <button type="button" class="btn btn-outline-success mt-2 me-2 btn-sm" (click)="currentTab = 2">Next</button>
                         <button type="button" class="btn btn-outline-success mt-2 me-2 btn-sm" (click)="currentTab = 0">Back</button>
                     </p-tabpanel>
-                    <p-tabpanel [value]="2">
+                    <p-tabpanel [value]="2" formGroupName="Address">
                         <div class="form-group">
                             <label>Floor</label>
-                            <input type="text" class="form-control">
+                            <input type="number" class="form-control" formControlName="FloorNo">
                         </div>
                         <div class="form-group">
                             <label>Total Floor</label>
-                            <input type="text" class="form-control">
+                            <input type="number" class="form-control" formControlName="TotalFloor">
                         </div>
                         <div class="form-group">
                             <label>Address</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="Address">
                         </div>
                         <div class="form-group">
                             <label>Landmark</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="Landmark">
                         </div>
 
                         <button type="button" class="btn btn-outline-success mt-2 me-2 btn-sm" (click)="currentTab = 3">Next</button>
                         <button type="button" class="btn btn-outline-success mt-2 me-2 btn-sm" (click)="currentTab = 1">Back</button>
                     </p-tabpanel>
-                    <p-tabpanel [value]="3">
-                        <div class="form-group">
+                    <p-tabpanel [value]="3" formGroupName="OtherDetails">
+                        <div class="form-group mt-1">
                             <div>
                                 <label>Ready to Move</label>
                             </div>
                         
-                            <p-radiobutton value="1"   inputId="ingredient1" />
+                            <p-radiobutton value="1" formControlName="RTM"/>
                             <label class="me-2 ">Yes</label>
 
-                            <p-radiobutton value="2"  inputId="ingredient2" />
+                            <p-radiobutton value="2" formControlName="RTM"/>
                             <label>No</label>
                         </div>
-                        <div class="form-group mt-2">
-                            <div>
-                                <label>Possession/Avaialble From</label>
-                            </div>                       
-                            <p-datepicker [iconDisplay]="'input'" [showIcon]="true" inputId="icondisplay" dateFormat="dd/mm/yy" />
-                        </div>
-                        <div class="form-group">
+                        <!-- value == 1 -->
+                        <div class="form-group mt-1">
                             <label>Age of Property</label>
-                            <input type="text" class="form-control">
+                            <input type="number" class="form-control" formControlName="AOP">
                         </div>
-                        <div class="form-group">
-                            <label>Gated Community</label>
-                            <input type="text" class="form-control">
+                        <!-- value == 2 -->
+                        <div>
+                            <div class="form-group mt-2">
+                                <div>
+                                    <label>Possession/Avaialble From</label>
+                                </div>                       
+                                <p-datepicker [iconDisplay]="'input'" [showIcon]="true" inputId="icondisplay" formControlName="Possession" dateFormat="dd/mm/yy" />
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label>Main Entrance</label>
-                            <input type="text" class="form-control">
+                        <div class="form-group  mt-1">
+                            <div>
+                                <label>Gated Community</label>
+                            </div>
+                           
+                            <p-radiobutton value="1" formControlName="Gated"/>
+                            <label class="me-2 ">Yes</label>
+
+                            <p-radiobutton value="2" formControlName="Gated"/>
+                            <label>No</label>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group  mt-1">
+                            <div>
+                                <label>Main Entrance</label>
+                            </div>                        
+
+                            <div *ngFor="let entrance of mainEntrances" class="d-inline me-1">                      
+                                <p-radiobutton class="me-1" [value]="entrance" formControlName="MainEntrance"></p-radiobutton>
+                                <label> {{ entrance }}</label>
+                            </div>
+                        </div>
+                        <div class="form-group mt-1">
                             <label>Description</label>
-                            <textarea type="text" class="form-control" rows="6"></textarea>
+                            <textarea type="text" class="form-control" rows="6" formControlName="Description"></textarea>
                         </div>
 
                         <button type="button" class="btn btn-outline-success mt-2 me-2 btn-sm" (click)="currentTab = 4">Next</button>
