--- a/real_estate_client/src/app/property/property-card/property-card.component.html
+++ b/real_estate_client/src/app/property/property-card/property-card.component.html
@@ -31,8 +31,8 @@
 
             <hr class="mt-0 mb-2">
 
-            <h6 class="mb-0">Price: <span>{{ property.Price }} USD.</span> |
-            Total Area: <span>{{ property.TotalArea }}  m<sup>2</sup>
+            <h6 class="mb-0">Price: <span class="card-item fw-bold">{{ property.Price }} USD.</span> |
+            Total Area: <span class="card-item fw-bold">{{ property.TotalArea }}m<sup>2</sup>
             </span></h6>
         </div>
 </div>
