--- a/real_estate_client/src/app/property/property-card/property-card.component.css
+++ b/real_estate_client/src/app/property/property-card/property-card.component.css
@@ -43,3 +43,12 @@ h1 {
 .animate {
     transition: all 0.3s ease-in-out;
 }
+
+.card-body h2 {
+    font-family: fantasy;
+    color: #10b981;;
+}
+
+.card-item {
+    color: #10b981;
+}
