Improved UI for valid tabs

--- a/real_estate_client/src/app/property/property-add/add-property/add-property.component.css
+++ b/real_estate_client/src/app/property/property-add/add-property/add-property.component.css
@@ -1,8 +1,8 @@
 .ng-invalid.ng-touched {
-    border-color: red;
+    border-color: #dc2626
 }
 .error-block {
-    color: red;
+    color:#dc2626
 }
 .photo-control {
     min-height: 300px;
@@ -14,6 +14,15 @@
 .card-header {
     color: #fff;
     background-color: #10b981;
-    border-radius: 3px;
+    border-radius: 1px;
     height: 36px;
+}
+.valid-tab-group {
+    background-color: #89bd7d;
+    color: #fff;
+    border: none;
+}
+.p-tab.valid-tab-group:hover {
+    background-color: #6eb65e;
+    color: #fff;;
 }
