Finishing property detail view and tabs

--- a/real_estate_client/src/app/property/property-detail/property-detail/property-detail.component.html
+++ b/real_estate_client/src/app/property/property-detail/property-detail/property-detail.component.html
@@ -2,7 +2,8 @@
     <div class="col-sm-4 p-0">
         <div class="card">
             <div class="card-img-wrapper">
-                <img src="assets/prop-1.png" class="card-img-top" alt="">
+                <img *ngIf="property.Image" src="assets/{{property.Image}}.png" class="card-img-top" alt="">
+                <img *ngIf="!property.Image" src="assets/default.jpg" class="card-img-top" alt="">
             </div>
             <div class="card-body">
                 <h1 class="card-title">{{property.Name}}</h1>
@@ -40,8 +41,54 @@
                 <p-tab [value]="0">Overview</p-tab>
                 <p-tab [value]="1">Address</p-tab>
                 <p-tab [value]="2">Photos</p-tab>
-                <p-tab [value]="4">Contact</p-tab>
+                <p-tab [value]="3">Contact</p-tab>
             </p-tablist>
+            <p-tabpanels>
+                <div class="card-body">
+                    <p-tabpanel [value]="0">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="heading">
+                                    <strong>Project Name</strong>
+                                    <p>{{property.Name}}</p>
+                                </div>
+              
+                                <div class="heading">
+                                    <strong>Floor Number</strong>
+                                    <p>{{property.FloorNo}}</p>
+                                </div>
+              
+                                <div class="heading">
+                                    <strong>Age of Property</strong>
+                                    <p>{{property.AOP}}</p>
+                                </div>
+              
+                                <div class="heading">
+                                    <strong>Posession</strong>
+                                    <p>{{property.Possession}}</p>
+                                </div>
+                            </div>
+                     </div>
+                    </p-tabpanel>
+                    <p-tabpanel [value]="1">
+                        <div class="col-sm-12">
+                            <h1>Address</h1>
+                            <div class="heading">
+                                <strong>{{property.Address}}</strong><br/>
+                                <strong>{{property.Address2}}</strong><br/>
+                                <strong>{{property.City}}</strong>
+                            </div>
+                        </div>
+                    </p-tabpanel>
+                    <p-tabpanel [value]="2">
+                        <h1>Photos</h1>
+                    </p-tabpanel>
+                    <p-tabpanel [value]="3">
+                        <h1>Contact Detail</h1>
+                        This should be restricted area and only registered user should be able to see seller contact details          
+                    </p-tabpanel>
+                </div>  
+            </p-tabpanels>
         </p-tabs>
     </div>
 </div>
