Fix total area measure display

--- a/real_estate_client/src/app/property/property-detail/property-detail/property-detail.component.html
+++ b/real_estate_client/src/app/property/property-detail/property-detail/property-detail.component.html
@@ -15,12 +15,12 @@
                 </div> <hr>
                 <div>
                     <strong>Total Area: </strong>
-                    {{property.TotalArea}} m2
+                    {{property.TotalArea}} m<sup>2</sup>
                 </div>
         
                 <div>
                     <strong>Carpet Area: </strong>
-                    {{property.CarpetArea}} m2
+                    {{property.CarpetArea}} m<sup>2</sup>
                 </div>
                 <div>
                     <strong>Furnishing Type: </strong>
